--- a/archives/toutiao-search/2024-02-18.md
+++ b/archives/toutiao-search/2024-02-18.md
@@ -1,59 +1,73 @@
 # 2024-02-18
 
-共 314 条
+共 326 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Feb 18 2024 21:00:42 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Feb 18 2024 22:00:45 GMT+0800 (China Standard Time) -->
 1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
-1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
-1. [春节国内出游人次创新高](https://so.toutiao.com/search?keyword=春节国内出游人次创新高)
-1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
-1. [学校否认秦朗巴黎丢寒假作业](https://so.toutiao.com/search?keyword=学校否认秦朗巴黎丢寒假作业)
-1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
 1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
-1. [男子走应急车道鸣笛惹众怒被包围](https://so.toutiao.com/search?keyword=男子走应急车道鸣笛惹众怒被包围)
+1. [7大关键词盘点龙年春节长假](https://so.toutiao.com/search?keyword=7大关键词盘点龙年春节长假)
+1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
+1. [台舆论关注大陆厦金海域巡查常态化](https://so.toutiao.com/search?keyword=台舆论关注大陆厦金海域巡查常态化)
+1. [高速免费最后时刻司机狂按喇叭](https://so.toutiao.com/search?keyword=高速免费最后时刻司机狂按喇叭)
+1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
+1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
 1. [多地有人捡到钱包转发寻失主？假的](https://so.toutiao.com/search?keyword=多地有人捡到钱包转发寻失主？假的)
 1. [匈牙利总理欧尔班会见王小洪](https://so.toutiao.com/search?keyword=匈牙利总理欧尔班会见王小洪)
 1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
-1. [王毅：中国经济长期向好势头更趋明显](https://so.toutiao.com/search?keyword=王毅：中国经济长期向好势头更趋明显)
-1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
-1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
-1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
-1. [游客吐槽长白山15分钟车程要150元](https://so.toutiao.com/search?keyword=游客吐槽长白山15分钟车程要150元)
-1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
-1. [高速免费最后时刻司机狂按喇叭](https://so.toutiao.com/search?keyword=高速免费最后时刻司机狂按喇叭)
-1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
-1. [新疆气温-52.3℃刷新历史最低极值](https://so.toutiao.com/search?keyword=新疆气温-52.3℃刷新历史最低极值)
-1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
-1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
-1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
-1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
-1. [女考古学家仍用着40年前的灯绳](https://so.toutiao.com/search?keyword=女考古学家仍用着40年前的灯绳)
-1. [过年对于留守老人就像一场热闹的梦](https://so.toutiao.com/search?keyword=过年对于留守老人就像一场热闹的梦)
-1. [林孝埈与刘少昂发生碰撞双双倒地](https://so.toutiao.com/search?keyword=林孝埈与刘少昂发生碰撞双双倒地)
-1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
-1. [徐冬冬尹子维订婚](https://so.toutiao.com/search?keyword=徐冬冬尹子维订婚)
-1. [院中三轮车被飘来的孔明灯引燃](https://so.toutiao.com/search?keyword=院中三轮车被飘来的孔明灯引燃)
-1. [乌克兰外长接受采访时抽起了雪茄](https://so.toutiao.com/search?keyword=乌克兰外长接受采访时抽起了雪茄)
-1. [1家5口从三亚飞回新疆要花10万](https://so.toutiao.com/search?keyword=1家5口从三亚飞回新疆要花10万)
-1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
-1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
-1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
+1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
 1. [小伙套大鹅宛如来进货](https://so.toutiao.com/search?keyword=小伙套大鹅宛如来进货)
+1. [南通龙椅厕所](https://so.toutiao.com/search?keyword=南通龙椅厕所)
+1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
+1. [游客借位拍照与大佛击掌](https://so.toutiao.com/search?keyword=游客借位拍照与大佛击掌)
+1. [徐冬冬尹子维订婚](https://so.toutiao.com/search?keyword=徐冬冬尹子维订婚)
+1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
+1. [卫健委干部盗卖1.5万套防护服获刑](https://so.toutiao.com/search?keyword=卫健委干部盗卖1.5万套防护服获刑)
+1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
+1. [男子走应急车道鸣笛惹众怒被包围](https://so.toutiao.com/search?keyword=男子走应急车道鸣笛惹众怒被包围)
+1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
+1. [2.62万元买下北京1.18㎡房子](https://so.toutiao.com/search?keyword=2.62万元买下北京1.18㎡房子)
+1. [女考古学家仍用着40年前的灯绳](https://so.toutiao.com/search?keyword=女考古学家仍用着40年前的灯绳)
+1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
+1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
+1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
+1. [普京：俄乌战事关乎俄罗斯“存亡”](https://so.toutiao.com/search?keyword=普京：俄乌战事关乎俄罗斯“存亡”)
+1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
+1. [学校否认秦朗巴黎丢寒假作业](https://so.toutiao.com/search?keyword=学校否认秦朗巴黎丢寒假作业)
+1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
+1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
+1. [杰伦·布朗身穿已故新秀球衣扣篮](https://so.toutiao.com/search?keyword=杰伦·布朗身穿已故新秀球衣扣篮)
+1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
+1. [乌克兰外长接受采访时抽起了雪茄](https://so.toutiao.com/search?keyword=乌克兰外长接受采访时抽起了雪茄)
+1. [16岁女篮队员身高已超过姚明](https://so.toutiao.com/search?keyword=16岁女篮队员身高已超过姚明)
+1. [过年对于留守老人就像一场热闹的梦](https://so.toutiao.com/search?keyword=过年对于留守老人就像一场热闹的梦)
+1. [过年独自留守的猫把家糟蹋了](https://so.toutiao.com/search?keyword=过年独自留守的猫把家糟蹋了)
+1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
+1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
+1. [乌东重镇阿夫杰耶夫卡为何如此重要](https://so.toutiao.com/search?keyword=乌东重镇阿夫杰耶夫卡为何如此重要)
 1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
+1. [胡兵伦敦街头走出T台步伐](https://so.toutiao.com/search?keyword=胡兵伦敦街头走出T台步伐)
+1. [拜年不带孩子：怕被以为是讨压岁钱](https://so.toutiao.com/search?keyword=拜年不带孩子：怕被以为是讨压岁钱)
+1. [魅族宣布全面押注AI](https://so.toutiao.com/search?keyword=魅族宣布全面押注AI)
+1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
+1. [Pika创始人回应OpenAI推出Sora](https://so.toutiao.com/search?keyword=Pika创始人回应OpenAI推出Sora)
+1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
+1. [武汉多所学校延迟返校](https://so.toutiao.com/search?keyword=武汉多所学校延迟返校)
+1. [郭敬明《大梦归离》官宣阵容](https://so.toutiao.com/search?keyword=郭敬明《大梦归离》官宣阵容)
+1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
+1. [春节国内出游人次创新高](https://so.toutiao.com/search?keyword=春节国内出游人次创新高)
+1. [王毅：中国经济长期向好势头更趋明显](https://so.toutiao.com/search?keyword=王毅：中国经济长期向好势头更趋明显)
+1. [游客吐槽长白山15分钟车程要150元](https://so.toutiao.com/search?keyword=游客吐槽长白山15分钟车程要150元)
+1. [新疆气温-52.3℃刷新历史最低极值](https://so.toutiao.com/search?keyword=新疆气温-52.3℃刷新历史最低极值)
+1. [林孝埈与刘少昂发生碰撞双双倒地](https://so.toutiao.com/search?keyword=林孝埈与刘少昂发生碰撞双双倒地)
+1. [院中三轮车被飘来的孔明灯引燃](https://so.toutiao.com/search?keyword=院中三轮车被飘来的孔明灯引燃)
+1. [1家5口从三亚飞回新疆要花10万](https://so.toutiao.com/search?keyword=1家5口从三亚飞回新疆要花10万)
 1. [阿夫杰耶夫卡之战后乌军境况不乐观](https://so.toutiao.com/search?keyword=阿夫杰耶夫卡之战后乌军境况不乐观)
 1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
-1. [胡兵伦敦街头走出T台步伐](https://so.toutiao.com/search?keyword=胡兵伦敦街头走出T台步伐)
-1. [16岁女篮队员身高已超过姚明](https://so.toutiao.com/search?keyword=16岁女篮队员身高已超过姚明)
-1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
-1. [游客借位拍照与大佛击掌](https://so.toutiao.com/search?keyword=游客借位拍照与大佛击掌)
-1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
-1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
 1. [开工第一天你收到开工红包了吗](https://so.toutiao.com/search?keyword=开工第一天你收到开工红包了吗)
 1. [券商：AI视频进入大规模应用前夜](https://so.toutiao.com/search?keyword=券商：AI视频进入大规模应用前夜)
 1. [特朗普卖球鞋](https://so.toutiao.com/search?keyword=特朗普卖球鞋)
 1. [高合汽车辟谣“宣布解散”传闻](https://so.toutiao.com/search?keyword=高合汽车辟谣“宣布解散”传闻)
-1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
 1. [西安沙尘暴](https://so.toutiao.com/search?keyword=西安沙尘暴)
 1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
 1. [女子购物被收银员拒收一毛硬币](https://so.toutiao.com/search?keyword=女子购物被收银员拒收一毛硬币)
@@ -80,9 +94,7 @@
 1. [甘肃一酒店免费接收30余名滞留旅客](https://so.toutiao.com/search?keyword=甘肃一酒店免费接收30余名滞留旅客)
 1. [男子酒驾弃车逃跑被警民合力抓回](https://so.toutiao.com/search?keyword=男子酒驾弃车逃跑被警民合力抓回)
 1. [颜宁感慨深圳半年将毛坯房变实验室](https://so.toutiao.com/search?keyword=颜宁感慨深圳半年将毛坯房变实验室)
-1. [魅族宣布全面押注AI](https://so.toutiao.com/search?keyword=魅族宣布全面押注AI)
 1. [男子高速路旁摆摊卖炒粉](https://so.toutiao.com/search?keyword=男子高速路旁摆摊卖炒粉)
-1. [台舆论关注大陆厦金海域巡查常态化](https://so.toutiao.com/search?keyword=台舆论关注大陆厦金海域巡查常态化)
 1. [非盟领导人谴责以色列军事行动](https://so.toutiao.com/search?keyword=非盟领导人谴责以色列军事行动)
 1. [堵车把车里的阿拉斯加堵哭了](https://so.toutiao.com/search?keyword=堵车把车里的阿拉斯加堵哭了)
 1. [男子离家返程 母亲默默流泪](https://so.toutiao.com/search?keyword=男子离家返程+母亲默默流泪)
