--- a/archives/toutiao-search/2024-02-19.md
+++ b/archives/toutiao-search/2024-02-19.md
@@ -1,61 +1,76 @@
 # 2024-02-19
 
-共 99 条
+共 108 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Feb 19 2024 07:00:50 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Feb 19 2024 08:26:14 GMT+0800 (China Standard Time) -->
 1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
-1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
+1. [乌称从阿夫杰耶夫卡撤军是正确决定](https://so.toutiao.com/search?keyword=乌称从阿夫杰耶夫卡撤军是正确决定)
 1. [7大关键词盘点龙年春节长假](https://so.toutiao.com/search?keyword=7大关键词盘点龙年春节长假)
-1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
-1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
-1. [男子走应急车道鸣笛惹众怒被包围](https://so.toutiao.com/search?keyword=男子走应急车道鸣笛惹众怒被包围)
+1. [湖南高速：来不及可先下一次高速](https://so.toutiao.com/search?keyword=湖南高速：来不及可先下一次高速)
 1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
-1. [河南警方悬赏5万缉捕重大刑案嫌犯](https://so.toutiao.com/search?keyword=河南警方悬赏5万缉捕重大刑案嫌犯)
-1. [多地有人捡到钱包转发寻失主？假的](https://so.toutiao.com/search?keyword=多地有人捡到钱包转发寻失主？假的)
-1. [珠海格力集团迎来“新掌门”](https://so.toutiao.com/search?keyword=珠海格力集团迎来“新掌门”)
-1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
-1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
-1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
-1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
+1. [男子走应急车道鸣笛惹众怒被包围](https://so.toutiao.com/search?keyword=男子走应急车道鸣笛惹众怒被包围)
 1. [徐冬冬尹子维订婚](https://so.toutiao.com/search?keyword=徐冬冬尹子维订婚)
 1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
-1. [卫健委干部盗卖1.5万套防护服获刑](https://so.toutiao.com/search?keyword=卫健委干部盗卖1.5万套防护服获刑)
-1. [高速太堵跟领导请假被拒了](https://so.toutiao.com/search?keyword=高速太堵跟领导请假被拒了)
-1. [2.62万元买下北京1.18㎡房子](https://so.toutiao.com/search?keyword=2.62万元买下北京1.18㎡房子)
-1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
-1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
+1. [收费站提前1小时停止免费？不实](https://so.toutiao.com/search?keyword=收费站提前1小时停止免费？不实)
+1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
+1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
+1. [正式确诊为魏晨](https://so.toutiao.com/search?keyword=正式确诊为魏晨)
+1. [今日雨水](https://so.toutiao.com/search?keyword=今日雨水)
 1. [小孩从石狮嘴里拿出圆球放不回去](https://so.toutiao.com/search?keyword=小孩从石狮嘴里拿出圆球放不回去)
-1. [三亚机票今年为何涨得那么猛](https://so.toutiao.com/search?keyword=三亚机票今年为何涨得那么猛)
+1. [高速太堵跟领导请假被拒了](https://so.toutiao.com/search?keyword=高速太堵跟领导请假被拒了)
+1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
+1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
 1. [普京：俄乌战事关乎俄罗斯“存亡”](https://so.toutiao.com/search?keyword=普京：俄乌战事关乎俄罗斯“存亡”)
+1. [珠海格力集团迎来“新掌门”](https://so.toutiao.com/search?keyword=珠海格力集团迎来“新掌门”)
+1. [建行回应女子因急办业务下跪](https://so.toutiao.com/search?keyword=建行回应女子因急办业务下跪)
+1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
+1. [卫健委干部盗卖1.5万套防护服获刑](https://so.toutiao.com/search?keyword=卫健委干部盗卖1.5万套防护服获刑)
+1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
+1. [游客借位拍照与大佛击掌](https://so.toutiao.com/search?keyword=游客借位拍照与大佛击掌)
+1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
+1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
+1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
+1. [2.62万元买下北京1.18㎡房子](https://so.toutiao.com/search?keyword=2.62万元买下北京1.18㎡房子)
+1. [马来西亚歌手父亲吸入鞭炮硝烟去世](https://so.toutiao.com/search?keyword=马来西亚歌手父亲吸入鞭炮硝烟去世)
+1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
+1. [雷军晒为员工发开工红包视频](https://so.toutiao.com/search?keyword=雷军晒为员工发开工红包视频)
+1. [堵车把车里的阿拉斯加堵哭了](https://so.toutiao.com/search?keyword=堵车把车里的阿拉斯加堵哭了)
+1. [男子吃席发现村里开始上预制菜](https://so.toutiao.com/search?keyword=男子吃席发现村里开始上预制菜)
+1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
+1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
+1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
+1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
+1. [泽连斯基敦促美西方尽快供乌武器](https://so.toutiao.com/search?keyword=泽连斯基敦促美西方尽快供乌武器)
+1. [警车未放警示标志遭追尾是否担责](https://so.toutiao.com/search?keyword=警车未放警示标志遭追尾是否担责)
+1. [魅族宣布全面押注AI](https://so.toutiao.com/search?keyword=魅族宣布全面押注AI)
+1. [极兔快递股价跳水](https://so.toutiao.com/search?keyword=极兔快递股价跳水)
+1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
+1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
+1. [特朗普推出运动鞋 售价399美元](https://so.toutiao.com/search?keyword=特朗普推出运动鞋+售价399美元)
+1. [新疆气温-52.3℃刷新历史最低极值](https://so.toutiao.com/search?keyword=新疆气温-52.3℃刷新历史最低极值)
+1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
+1. [郭文景：已着手准备与Sora直接竞争](https://so.toutiao.com/search?keyword=郭文景：已着手准备与Sora直接竞争)
+1. [南通龙椅厕所](https://so.toutiao.com/search?keyword=南通龙椅厕所)
+1. [湖南一洒水车碾压路人后逃逸](https://so.toutiao.com/search?keyword=湖南一洒水车碾压路人后逃逸)
+1. [揭秘Sora：开发团队成立不到1年](https://so.toutiao.com/search?keyword=揭秘Sora：开发团队成立不到1年)
+1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
+1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
+1. [河南警方悬赏5万缉捕重大刑案嫌犯](https://so.toutiao.com/search?keyword=河南警方悬赏5万缉捕重大刑案嫌犯)
+1. [多地有人捡到钱包转发寻失主？假的](https://so.toutiao.com/search?keyword=多地有人捡到钱包转发寻失主？假的)
+1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
+1. [三亚机票今年为何涨得那么猛](https://so.toutiao.com/search?keyword=三亚机票今年为何涨得那么猛)
 1. [王毅驳斥中国在南海咄咄逼人谬论](https://so.toutiao.com/search?keyword=王毅驳斥中国在南海咄咄逼人谬论)
 1. [网友用无人机拍到狼群雪中前行画面](https://so.toutiao.com/search?keyword=网友用无人机拍到狼群雪中前行画面)
-1. [建行回应女子因急办业务下跪](https://so.toutiao.com/search?keyword=建行回应女子因急办业务下跪)
-1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
-1. [雷军晒为员工发开工红包视频](https://so.toutiao.com/search?keyword=雷军晒为员工发开工红包视频)
-1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
-1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
-1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
-1. [魅族宣布全面押注AI](https://so.toutiao.com/search?keyword=魅族宣布全面押注AI)
-1. [正式确诊为魏晨](https://so.toutiao.com/search?keyword=正式确诊为魏晨)
 1. [武汉多所学校延迟返校](https://so.toutiao.com/search?keyword=武汉多所学校延迟返校)
-1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
-1. [南通龙椅厕所](https://so.toutiao.com/search?keyword=南通龙椅厕所)
 1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
-1. [郭文景：已着手准备与Sora直接竞争](https://so.toutiao.com/search?keyword=郭文景：已着手准备与Sora直接竞争)
 1. [腾讯小米为员工发开工红包](https://so.toutiao.com/search?keyword=腾讯小米为员工发开工红包)
-1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
-1. [新疆气温-52.3℃刷新历史最低极值](https://so.toutiao.com/search?keyword=新疆气温-52.3℃刷新历史最低极值)
 1. [拜登：美国会继续向乌克兰提供援助](https://so.toutiao.com/search?keyword=拜登：美国会继续向乌克兰提供援助)
-1. [极兔快递股价跳水](https://so.toutiao.com/search?keyword=极兔快递股价跳水)
-1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
 1. [起底胖东来热搜背后的AB面](https://so.toutiao.com/search?keyword=起底胖东来热搜背后的AB面)
-1. [男子吃席发现村里开始上预制菜](https://so.toutiao.com/search?keyword=男子吃席发现村里开始上预制菜)
 1. [谭德塞就暴发“X疾病”可能性警告](https://so.toutiao.com/search?keyword=谭德塞就暴发“X疾病”可能性警告)
 1. [拜年不带孩子：怕被以为是讨压岁钱](https://so.toutiao.com/search?keyword=拜年不带孩子：怕被以为是讨压岁钱)
 1. [乌克兰外长接受采访时抽起了雪茄](https://so.toutiao.com/search?keyword=乌克兰外长接受采访时抽起了雪茄)
 1. [台舆论关注大陆厦金海域巡查常态化](https://so.toutiao.com/search?keyword=台舆论关注大陆厦金海域巡查常态化)
-1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
 1. [小孩脖子被男童扔进烟花疼到打滚](https://so.toutiao.com/search?keyword=小孩脖子被男童扔进烟花疼到打滚)
 1. [亚太科技子公司发生安全事故](https://so.toutiao.com/search?keyword=亚太科技子公司发生安全事故)
 1. [老凤祥清洗手镯疑故意蹭掉品牌logo](https://so.toutiao.com/search?keyword=老凤祥清洗手镯疑故意蹭掉品牌logo)
@@ -65,14 +80,11 @@
 1. [湖南警方悬赏5万缉捕在逃嫌犯](https://so.toutiao.com/search?keyword=湖南警方悬赏5万缉捕在逃嫌犯)
 1. [美联储降息预期如何左右短期金价](https://so.toutiao.com/search?keyword=美联储降息预期如何左右短期金价)
 1. [小伙套大鹅宛如来进货](https://so.toutiao.com/search?keyword=小伙套大鹅宛如来进货)
-1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
 1. [乌军从乌东重镇艰难撤离画面曝光](https://so.toutiao.com/search?keyword=乌军从乌东重镇艰难撤离画面曝光)
-1. [泽连斯基敦促美西方尽快供乌武器](https://so.toutiao.com/search?keyword=泽连斯基敦促美西方尽快供乌武器)
 1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
 1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
 1. [冯德莱恩拟推动欧委会设国防专员](https://so.toutiao.com/search?keyword=冯德莱恩拟推动欧委会设国防专员)
 1. [以军密集轰炸加沙地带多地](https://so.toutiao.com/search?keyword=以军密集轰炸加沙地带多地)
-1. [马来西亚歌手父亲吸入鞭炮硝烟去世](https://so.toutiao.com/search?keyword=马来西亚歌手父亲吸入鞭炮硝烟去世)
 1. [台当局赴陆旅行“禁团令”惹众怒](https://so.toutiao.com/search?keyword=台当局赴陆旅行“禁团令”惹众怒)
 1. [高速免费最后时刻司机狂按喇叭](https://so.toutiao.com/search?keyword=高速免费最后时刻司机狂按喇叭)
 1. [官方回应男子乘轮渡跳海](https://so.toutiao.com/search?keyword=官方回应男子乘轮渡跳海)
@@ -88,7 +100,6 @@
 1. [匈牙利总理欧尔班会见王小洪](https://so.toutiao.com/search?keyword=匈牙利总理欧尔班会见王小洪)
 1. [王传福：比亚迪进入滚装船业务领域](https://so.toutiao.com/search?keyword=王传福：比亚迪进入滚装船业务领域)
 1. [王传福：新能源汽车将迎来三大机遇](https://so.toutiao.com/search?keyword=王传福：新能源汽车将迎来三大机遇)
-1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
 1. [爸爸带三娃抄近道下山迷路了](https://so.toutiao.com/search?keyword=爸爸带三娃抄近道下山迷路了)
 1. [1919杨陵江称被五粮液拖欠近6000万](https://so.toutiao.com/search?keyword=1919杨陵江称被五粮液拖欠近6000万)
 1. [东莞2024年力争GDP增长5%](https://so.toutiao.com/search?keyword=东莞2024年力争GDP增长5%)
@@ -96,11 +107,9 @@
 1. [学校否认秦朗巴黎丢寒假作业](https://so.toutiao.com/search?keyword=学校否认秦朗巴黎丢寒假作业)
 1. [女考古学家仍用着40年前的灯绳](https://so.toutiao.com/search?keyword=女考古学家仍用着40年前的灯绳)
 1. [曼联官方晒对阵卢顿海报](https://so.toutiao.com/search?keyword=曼联官方晒对阵卢顿海报)
-1. [游客借位拍照与大佛击掌](https://so.toutiao.com/search?keyword=游客借位拍照与大佛击掌)
 1. [周杰伦昆凌看霉霉演唱会](https://so.toutiao.com/search?keyword=周杰伦昆凌看霉霉演唱会)
 1. [张雪峰晒开工红包：200是最低的](https://so.toutiao.com/search?keyword=张雪峰晒开工红包：200是最低的)
 1. [胡锡进谈文生视频模型Sora](https://so.toutiao.com/search?keyword=胡锡进谈文生视频模型Sora)
 1. [过年对于留守老人就像一场热闹的梦](https://so.toutiao.com/search?keyword=过年对于留守老人就像一场热闹的梦)
 1. [胡兵伦敦街头走出T台步伐](https://so.toutiao.com/search?keyword=胡兵伦敦街头走出T台步伐)
-1. [特朗普推出运动鞋 售价399美元](https://so.toutiao.com/search?keyword=特朗普推出运动鞋+售价399美元)
 <!-- END TOUTIAO -->
