--- a/archives/toutiao-search/2024-02-19.md
+++ b/archives/toutiao-search/2024-02-19.md
@@ -1,51 +1,67 @@
 # 2024-02-19
 
-共 122 条
+共 135 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Feb 19 2024 10:14:19 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Feb 19 2024 11:00:34 GMT+0800 (China Standard Time) -->
 1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
 1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
 1. [7大关键词盘点龙年春节长假](https://so.toutiao.com/search?keyword=7大关键词盘点龙年春节长假)
-1. [珠海格力集团迎来“新掌门”](https://so.toutiao.com/search?keyword=珠海格力集团迎来“新掌门”)
-1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
+1. [格力集团迎来“新掌门”](https://so.toutiao.com/search?keyword=格力集团迎来“新掌门”)
+1. [比亚迪秦PLUS荣耀版上市](https://so.toutiao.com/search?keyword=比亚迪秦PLUS荣耀版上市)
 1. [男子走应急车道鸣笛惹众怒被包围](https://so.toutiao.com/search?keyword=男子走应急车道鸣笛惹众怒被包围)
 1. [徐冬冬尹子维订婚](https://so.toutiao.com/search?keyword=徐冬冬尹子维订婚)
-1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
+1. [比亚迪路天：要实现“电比油低”](https://so.toutiao.com/search?keyword=比亚迪路天：要实现“电比油低”)
 1. [收费站提前1小时停止免费？不实](https://so.toutiao.com/search?keyword=收费站提前1小时停止免费？不实)
-1. [马来西亚歌手父亲吸入鞭炮硝烟去世](https://so.toutiao.com/search?keyword=马来西亚歌手父亲吸入鞭炮硝烟去世)
+1. [谭德塞就暴发“X疾病”可能性警告](https://so.toutiao.com/search?keyword=谭德塞就暴发“X疾病”可能性警告)
 1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
 1. [正式确诊为魏晨](https://so.toutiao.com/search?keyword=正式确诊为魏晨)
 1. [今日雨水](https://so.toutiao.com/search?keyword=今日雨水)
-1. [高速太堵跟领导请假被拒了](https://so.toutiao.com/search?keyword=高速太堵跟领导请假被拒了)
-1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
-1. [卫健委干部盗卖1.5万套防护服获刑](https://so.toutiao.com/search?keyword=卫健委干部盗卖1.5万套防护服获刑)
-1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
-1. [建行回应女子因急办业务下跪](https://so.toutiao.com/search?keyword=建行回应女子因急办业务下跪)
 1. [小孩从石狮嘴里拿出圆球放不回去](https://so.toutiao.com/search?keyword=小孩从石狮嘴里拿出圆球放不回去)
-1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
-1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
-1. [湖南高速：来不及可先下一次高速](https://so.toutiao.com/search?keyword=湖南高速：来不及可先下一次高速)
-1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
-1. [郑永年梳理出乡村振兴的三种思路](https://so.toutiao.com/search?keyword=郑永年梳理出乡村振兴的三种思路)
-1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
-1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
-1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
-1. [普京：俄乌战事关乎俄罗斯“存亡”](https://so.toutiao.com/search?keyword=普京：俄乌战事关乎俄罗斯“存亡”)
-1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
-1. [南通龙椅厕所](https://so.toutiao.com/search?keyword=南通龙椅厕所)
-1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
-1. [极兔快递股价跳水](https://so.toutiao.com/search?keyword=极兔快递股价跳水)
-1. [网友用无人机拍到狼群雪中前行画面](https://so.toutiao.com/search?keyword=网友用无人机拍到狼群雪中前行画面)
 1. [国家安全部喊话美国中情局](https://so.toutiao.com/search?keyword=国家安全部喊话美国中情局)
+1. [湖南高速：来不及可先下一次高速](https://so.toutiao.com/search?keyword=湖南高速：来不及可先下一次高速)
+1. [格力电器：高额分红重视股东回报](https://so.toutiao.com/search?keyword=格力电器：高额分红重视股东回报)
+1. [马来西亚歌手父亲吸入鞭炮硝烟去世](https://so.toutiao.com/search?keyword=马来西亚歌手父亲吸入鞭炮硝烟去世)
+1. [格力电器仍由董明珠掌舵](https://so.toutiao.com/search?keyword=格力电器仍由董明珠掌舵)
+1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
+1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
+1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
+1. [建行回应女子因急办业务下跪](https://so.toutiao.com/search?keyword=建行回应女子因急办业务下跪)
+1. [高速太堵跟领导请假被拒了](https://so.toutiao.com/search?keyword=高速太堵跟领导请假被拒了)
+1. [卫健委干部盗卖1.5万套防护服获刑](https://so.toutiao.com/search?keyword=卫健委干部盗卖1.5万套防护服获刑)
+1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
+1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
+1. [普京：俄乌战事关乎俄罗斯“存亡”](https://so.toutiao.com/search?keyword=普京：俄乌战事关乎俄罗斯“存亡”)
+1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
+1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
+1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
+1. [网友用无人机拍到狼群雪中前行画面](https://so.toutiao.com/search?keyword=网友用无人机拍到狼群雪中前行画面)
+1. [流浪棋王邓有邦现状](https://so.toutiao.com/search?keyword=流浪棋王邓有邦现状)
+1. [男子吃席发现村里开始上预制菜](https://so.toutiao.com/search?keyword=男子吃席发现村里开始上预制菜)
+1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
+1. [极兔快递股价跳水](https://so.toutiao.com/search?keyword=极兔快递股价跳水)
+1. [釜山世乒赛团体赛国乒女团三连胜](https://so.toutiao.com/search?keyword=釜山世乒赛团体赛国乒女团三连胜)
+1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
+1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
+1. [南通龙椅厕所](https://so.toutiao.com/search?keyword=南通龙椅厕所)
+1. [颜宁谈贾玲新造型：陷入刻板审美](https://so.toutiao.com/search?keyword=颜宁谈贾玲新造型：陷入刻板审美)
+1. [2.62万元买下北京1.18㎡房子](https://so.toutiao.com/search?keyword=2.62万元买下北京1.18㎡房子)
+1. [俄称在多个方向击退乌军进攻](https://so.toutiao.com/search?keyword=俄称在多个方向击退乌军进攻)
+1. [特朗普推出运动鞋 售价399美元](https://so.toutiao.com/search?keyword=特朗普推出运动鞋+售价399美元)
+1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
+1. [詹姆斯称自己生涯余额已没那么多](https://so.toutiao.com/search?keyword=詹姆斯称自己生涯余额已没那么多)
+1. [腾讯小米为员工发开工红包](https://so.toutiao.com/search?keyword=腾讯小米为员工发开工红包)
+1. [美军称对也门胡塞武装实施5次打击](https://so.toutiao.com/search?keyword=美军称对也门胡塞武装实施5次打击)
+1. [纽约州长就“用词不当”公开道歉](https://so.toutiao.com/search?keyword=纽约州长就“用词不当”公开道歉)
+1. [OpenAI视频生成模型如何影响普通人](https://so.toutiao.com/search?keyword=OpenAI视频生成模型如何影响普通人)
+1. [珠海格力集团迎来“新掌门”](https://so.toutiao.com/search?keyword=珠海格力集团迎来“新掌门”)
+1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
+1. [郑永年梳理出乡村振兴的三种思路](https://so.toutiao.com/search?keyword=郑永年梳理出乡村振兴的三种思路)
 1. [雷军晒为员工发开工红包视频](https://so.toutiao.com/search?keyword=雷军晒为员工发开工红包视频)
 1. [曝拜仁内部已在讨论图赫尔帅位问题](https://so.toutiao.com/search?keyword=曝拜仁内部已在讨论图赫尔帅位问题)
 1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
-1. [腾讯小米为员工发开工红包](https://so.toutiao.com/search?keyword=腾讯小米为员工发开工红包)
 1. [小伙套大鹅宛如来进货](https://so.toutiao.com/search?keyword=小伙套大鹅宛如来进货)
 1. [拜仁本场评分：图赫尔等3人最低](https://so.toutiao.com/search?keyword=拜仁本场评分：图赫尔等3人最低)
-1. [男子吃席发现村里开始上预制菜](https://so.toutiao.com/search?keyword=男子吃席发现村里开始上预制菜)
-1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
 1. [巴西称以色列实施种族灭绝 以抗议](https://so.toutiao.com/search?keyword=巴西称以色列实施种族灭绝+以抗议)
 1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
 1. [浙江“新春第一会”](https://so.toutiao.com/search?keyword=浙江“新春第一会”)
@@ -61,7 +77,6 @@
 1. [学者分享来自慕安会的现场感受](https://so.toutiao.com/search?keyword=学者分享来自慕安会的现场感受)
 1. [Sora会“抢”谁的饭碗](https://so.toutiao.com/search?keyword=Sora会“抢”谁的饭碗)
 1. [新疆气温-52.3℃刷新历史最低极值](https://so.toutiao.com/search?keyword=新疆气温-52.3℃刷新历史最低极值)
-1. [2.62万元买下北京1.18㎡房子](https://so.toutiao.com/search?keyword=2.62万元买下北京1.18㎡房子)
 1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
 1. [日本女生在中国朋友家过年看抗日剧](https://so.toutiao.com/search?keyword=日本女生在中国朋友家过年看抗日剧)
 1. [乌称从阿夫杰耶夫卡撤军是正确决定](https://so.toutiao.com/search?keyword=乌称从阿夫杰耶夫卡撤军是正确决定)
@@ -70,7 +85,6 @@
 1. [泽连斯基敦促美西方尽快供乌武器](https://so.toutiao.com/search?keyword=泽连斯基敦促美西方尽快供乌武器)
 1. [魅族宣布全面押注AI](https://so.toutiao.com/search?keyword=魅族宣布全面押注AI)
 1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
-1. [特朗普推出运动鞋 售价399美元](https://so.toutiao.com/search?keyword=特朗普推出运动鞋+售价399美元)
 1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
 1. [郭文景：已着手准备与Sora直接竞争](https://so.toutiao.com/search?keyword=郭文景：已着手准备与Sora直接竞争)
 1. [揭秘Sora：开发团队成立不到1年](https://so.toutiao.com/search?keyword=揭秘Sora：开发团队成立不到1年)
@@ -83,7 +97,6 @@
 1. [武汉多所学校延迟返校](https://so.toutiao.com/search?keyword=武汉多所学校延迟返校)
 1. [拜登：美国会继续向乌克兰提供援助](https://so.toutiao.com/search?keyword=拜登：美国会继续向乌克兰提供援助)
 1. [起底胖东来热搜背后的AB面](https://so.toutiao.com/search?keyword=起底胖东来热搜背后的AB面)
-1. [谭德塞就暴发“X疾病”可能性警告](https://so.toutiao.com/search?keyword=谭德塞就暴发“X疾病”可能性警告)
 1. [拜年不带孩子：怕被以为是讨压岁钱](https://so.toutiao.com/search?keyword=拜年不带孩子：怕被以为是讨压岁钱)
 1. [乌克兰外长接受采访时抽起了雪茄](https://so.toutiao.com/search?keyword=乌克兰外长接受采访时抽起了雪茄)
 1. [台舆论关注大陆厦金海域巡查常态化](https://so.toutiao.com/search?keyword=台舆论关注大陆厦金海域巡查常态化)
